[package]
name = "fourier-bench"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"
publish = false

[dev-dependencies]
criterion = "0.3"
fftw = { version = "0.6.2", default-features = false, features = ["system"] }
fourier = { path = "../fourier" }
num-complex = { version = "0.3", default-features = false }
rand = "0.7"
rustfft = "5.0.0-experimental.2"

[[bench]]
name = "fft_bench"
harness = false
